Change title levels, fix fonts and other layout issues, fix broken links (#374)
* Change title levels, fix fonts and other layout issues

* fix(zeroState): Fix broken links

---------

--- a/src/PresentationalComponents/ZeroState/_zero-state.scss
+++ b/src/PresentationalComponents/ZeroState/_zero-state.scss
@@ -51,6 +51,8 @@ $ins-c-marketing-banner--breakpoint-map: build-breakpoint-map();
 }
 
 .footer {
+  padding-top: 0;
+
   a{
     text-decoration: none;
     color: #151515;
@@ -60,6 +62,7 @@ $ins-c-marketing-banner--breakpoint-map: build-breakpoint-map();
 .bannerRight {
   height:100%;
   justify-content: center;
+  padding: 1.5rem;
 }
 .bannerBefore{
   max-height: 300px;
